k8s/worker-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      groupOne: worker
  template:
    metadata:
      labels:
        groupOne: worker
    spec:
      containers:
        - name: worker
          image: yehuizhang/dk-fib-worker
