k8s/redis-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      groupOne: redis
  template:
    metadata:
      labels:
        groupOne: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  ports: 
    - port: 6379
      targetPort: 6379
  selector:
    groupOne: redis
