k8s/server-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      groupOne: server
  template:
    metadata:
      labels:
        groupOne: server
    spec:
      containers:
        - name: server
          image: yehuizhang/dk-fib-server
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  ports: 
    - port: 5000
      targetPort: 5000
  selector:
    groupOne: server
